fixed location page hero banner on mobile and desktop

--- a/themes/evr/sass/_globals.scss
+++ b/themes/evr/sass/_globals.scss
@@ -42,7 +42,7 @@ h3{
 }
 
 p{
-  font-weight: 400;
+  font-weight: 300;
 }
 
 ul {
@@ -52,6 +52,10 @@ ul {
 
 li {
   list-style: none;
+}
+
+a{
+  font-weight: 300;
 }
 
 
