--- a/themes/evr/sass/_location.scss
+++ b/themes/evr/sass/_location.scss
@@ -5,39 +5,50 @@
   padding-left: 2rem;
   padding-right: 2rem;
 }
-
+.container-max1080{
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+}
+// location page style
 .page-id-23{
-  .location-hero-container{
-    background: url("../../assets/images/locations.png") no-repeat bottom;
+  .hero-banner{
+    background: linear-gradient( rgba(0, 0, 0, 0.1),rgba(0, 0, 0, 0.6)), url("../../assets/images/locations.png") center;
+    background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: 500px;
     @include desktop{
       position: relative;
       height: 100vh;
-
     }
-    .location-hero-content{
+    .hero-content-container{
       display: none;
       @include desktop{
         color: white;
-        display: block;
+        display: inline-block;
         position: absolute;
-        top: 40%;
-        max-width:800px;
+        bottom: 0;
+        margin-bottom: 5rem;
+        width: 100%;
       }
       .hero-content-title{
-        font-size: 5rem;
-        font-weight: 400;
+        font-size: 4rem;
+        font-weight: 300;
         text-transform: uppercase;
         margin-bottom: 0;
       }
       .hero-content-description, .hero-button{
-        font-size: 1.5rem;
+        font-size: 1.4rem;
+      }
+      .hero-content-description{
+        max-width: 800px;
       }
       .hero-button{
         color: white;
-        
+        &:hover{
+          color: $color_primary_orange;
+        }
       }
     }
   }
